# sec_yf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  dev.py  pyproject.toml
docs/: Makefile  changelog.md  conf.py  example.ipynb  make.bat
sec/2009q2/: data.parquet
sec/2009q3/: data.parquet
sec/2009q4/: data.parquet
sec/2010q1/: data.parquet
sec/2010q2/: data.parquet
sec/2010q3/: data.parquet
sec/2010q4/: data.parquet
sec/2011q1/: data.parquet
sec/2011q2/: data.parquet
src/sec_yf/: __init__.py  download_sec.py  yahoo_finance.py
tests/: test_sec_yf.py
