[tool.poetry]
name = "sec_yf"
version = "0.0.0"
description = "A package for downloading accounting and market data from SEC regulated companies."
authors = ["Juan F. Imbet"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.5"
pandas = "^2.2.3"
bs4 = "^0.0.2"
yfinance = "^0.2.44"
sec-cik-mapper = "^2.1.0"
pyarrow = "^17.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.semantic_release] 
version_variable = "pyproject.toml:version" 
version_toml = [ 
"pyproject.toml:tool.poetry.version", 
] 
